feat: enable email notifications for CUE teams
Enable email_anonymous_id feature for all three CUE teams:
- konfluxui
- rhtapui
- securesign

Team members will now receive their anonymous ID via email when
reports are generated, allowing them to find their personal metrics
in the anonymized reports.

--- a/config/CUE/konfluxui/jira_report_config.yaml
+++ b/config/CUE/konfluxui/jira_report_config.yaml
@@ -69,3 +69,8 @@ team_members:
     capacity: 1
 
 output_dir: "reports/konfluxui/jira"
+
+# Email notification settings (optional)
+# When enabled, team members receive their anonymous ID via email
+email_anonymous_id:
+  enabled: true  # Set to false to disable email notifications
