feat: enable email notifications for release-service team
- Add email_anonymous_id configuration to all release-service configs
- Enabled for: release-service (jira + pr), release-service-catalog, release-service-utils, internal-services
- Team members will receive their anonymous ID via email when reports are generated

--- a/config/release-service/internal-services/pr_report_config.yaml
+++ b/config/release-service/internal-services/pr_report_config.yaml
@@ -58,3 +58,8 @@ team_members:
     email: sconroy@redhat.com
 
 output_dir: "reports/internal-services/github"
+
+# Email notification settings (optional)
+# When enabled, team members receive their anonymous ID via email
+email_anonymous_id:
+  enabled: true  # Set to false to disable email notifications
