--- a/config/release-service/release-service/jira_report_config.yaml
+++ b/config/release-service/release-service/jira_report_config.yaml
@@ -86,3 +86,8 @@ team_members:
     capacity: 1
 
 output_dir: "reports/release-service/jira"
+
+# Email notification settings (optional)
+# When enabled, team members receive their anonymous ID via email
+email_anonymous_id:
+  enabled: true  # Set to false to disable email notifications
