--- a/config/jira_report_config.yaml.example
+++ b/config/jira_report_config.yaml.example
@@ -10,17 +10,6 @@ project:
   # If you do not set, would upload to the default google-sheet.
   # IMPORTANT: For custom sheets in CI, grant Editor access to: cara-google-sheet-sa@wlin-438107.iam.gserviceaccount.com
 
-# Output directory for reports
-# SIMPLE SCENARIO (single project): Optional, defaults to "reports/jira"
-# COMPLEX SCENARIO (multi-project aggregation): REQUIRED! Must be "reports/{project-name}/jira"
-#   where {project-name} matches the subdirectory name in aggregation config
-#
-# Example for aggregation:
-# output_dir: "reports/internal-services/jira"  # For config/my-team/internal-services/jira_report_config.yaml
-# output_dir: "reports/frontend/jira"           # For config/my-team/frontend/jira_report_config.yaml
-#
-# output_dir: "reports/jira"  # Simple scenario (optional)
-
 phases:
   - name: "No AI Period"
     start: "2024-10-24"
@@ -34,55 +23,39 @@ phases:
 
 default_assignee: "" # "" represent team
 
-team_members:
-  - member: sbudhwar
-    leave_days:
-    email: sbudhwar@redhat.com
+members:
+  - email: sbudhwar@redhat.com
     leave_days: 0 # Optional when it is 0
     capacity: 1 # Optional when it is 1
-  - member: wlin
-    email: wlin@redhat.com
+  - email: wlin@redhat.com
     leave_days:
       - 26
       - 20
       - 11.5
     capacity: 0.8
-  - member: kkanova
-    email: kkanova@redhat.com
-    leave_days: 0
+  - email: kkanova@redhat.com
     capacity: 0.5
-  - member: djanaki
-    email: djanaki@redhat.com
-    leave_days: 0
-    capacity: 1
-  - member: rakshett
-    email: rakshett@redhat.com
-    leave_days: 0
-    capacity: 1
-  - member: abhindas
-    email: abhindas@redhat.com
-    leave_days: 0
+  - email: djanaki@redhat.com
+  - email: rakshett@redhat.com
+  - email: abhindas@redhat.com
     capacity:
       - 1.0
       - 0.5
       - 0.0
-  - member: rgalvao
-    email: rgalvao@redhat.com
-    leave_days: 0
-    capacity: 1
-  - member: sjochman
-    email: sjochman@redhat.com
-    leave_days: 0
-    capacity: 1
-  - member: mtakac
-    email: mtakac@redhat.com
-    capacity: 1
-    leave_days: 0
-  - member: jpolonip
-    email: jpolonip@redhat.com
-    leave_days: 0
-    capacity: 1
-  - member: mmarcin
-    email: mmarcin@redhat.com
-    leave_days: 0
-    capacity: 1
+  - email: rgalvao@redhat.com
+  - email: sjochman@redhat.com
+  - email: mtakac@redhat.com
+  - email: jpolonip@redhat.com
+  - email: mmarcin@redhat.com
+
+
+# Output directory for reports
+# SIMPLE SCENARIO (single project): Optional, defaults to "reports/jira"
+# COMPLEX SCENARIO (multi-project aggregation): REQUIRED! Must be "reports/{project-name}/jira"
+#   where {project-name} matches the subdirectory name in aggregation config
+#
+# Example for aggregation:
+# output_dir: "reports/internal-services/jira"  # For config/my-team/internal-services/jira_report_config.yaml
+# output_dir: "reports/frontend/jira"           # For config/my-team/frontend/jira_report_config.yaml
+#
+# output_dir: "reports/jira"  # Simple scenario (optional)
