--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -226,14 +226,14 @@ jobs:
             echo "✓ Google Sheets configured, will upload reports"
           fi
 
-          # Run full workflow with test mode (emails only to wlin@redhat.com)
+          # Run full workflow with mail-save-file mode (emails saved to files)
           python -m impactlens.cli full \
             --config config/test-integration-ci/test-ci-team \
             $UPLOAD_ARGS \
             --incremental \
             --hide-individual-names \
             --email-anonymous-id \
-            --test-mode
+            --mail-save-file reports/test-ci-team/emails
 
           echo ""
           echo "✓ Full integration test completed (Jira + PR + Email)"
@@ -379,7 +379,7 @@ jobs:
           # Send emails using the aggregation config (auto-deduplicates by email)
           python -m impactlens.scripts.send_email_notifications \
             --config-dir config/test-aggregation-ci \
-            --test-mode
+            --mail-save-file reports/test-ci-aggregated/emails
 
           echo ""
           echo "✓ Multi-team email notification test completed"
