fix：improve config to match latest config

--- a/config/release-service/aggregation_config.yaml
+++ b/config/release-service/aggregation_config.yaml
@@ -3,10 +3,14 @@ aggregation:
   name: "Release Service Team"
 
   # Output directory for aggregated reports
-  output_dir: "reports/release-service-aggregated"
 
   projects:
     - "release-service"
     - "release-service-catalog"
     - "release-service-utils"
     - "internal-services"
+
+
+output_dir: "reports/release-service-aggregated"
+replace_existing_reports: true
+email_anonymous_id: false # Set to false to disable email notifications
