chore: improve logs, CI and readme

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -385,6 +385,64 @@ jobs:
           echo "✓ Multi-team email notification test completed"
           echo "  (Emails deduplicated across all teams and sent once per person)"
 
+      - name: Test analysis prompt generation
+        if: steps.docs_check.outputs.code_changed == 'true'
+        run: |
+          echo "=========================================="
+          echo "Testing Analysis Prompt Generation"
+          echo "=========================================="
+          echo ""
+
+          # Enable recursive globbing
+          shopt -s globstar nullglob
+
+          PROMPT_COUNT=0
+          FAILED_COUNT=0
+
+          # Test prompt generation for both Jira and PR combined reports
+          for pattern in "combined_jira_report" "combined_pr_report"; do
+            for report in reports/test-ci-team*/**/${pattern}_*.tsv; do
+              if [ -f "$report" ]; then
+                echo "Testing prompt generation for: $report"
+
+                # Extract directory and determine output
+                output_dir="$(dirname "$report")/prompts-test"
+                mkdir -p "$output_dir"
+
+                if python -m impactlens.scripts.analyze_with_claude_code \
+                  --reports-dir "$report" \
+                  --prompt-only \
+                  --output-dir "$output_dir" 2>&1; then
+                  echo "  ✓ Prompt generated successfully"
+                  PROMPT_COUNT=$((PROMPT_COUNT + 1))
+                else
+                  echo "  ✗ Failed to generate prompt"
+                  FAILED_COUNT=$((FAILED_COUNT + 1))
+                fi
+                echo ""
+              fi
+            done
+          done
+
+          echo "=========================================="
+          echo "Prompt Generation Test Summary"
+          echo "=========================================="
+          echo "  Prompts generated: $PROMPT_COUNT"
+          echo "  Failed: $FAILED_COUNT"
+
+          if [ $PROMPT_COUNT -eq 0 ]; then
+            echo ""
+            echo "⚠️  No combined reports found for prompt generation test"
+            echo "   This is expected if report generation was skipped"
+          elif [ $FAILED_COUNT -gt 0 ]; then
+            echo ""
+            echo "✗ Some prompt generations failed"
+            exit 1
+          else
+            echo ""
+            echo "✓ All prompt generation tests passed"
+          fi
+
       - name: Upload test reports as artifacts
         if: steps.docs_check.outputs.code_changed == 'true' && always()
         uses: actions/upload-artifact@v4
