--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,8 +104,8 @@ jobs:
         echo "⏭️  Skipping type checks (only runs on Python 3.11)"
 
 
-  integration-test:
-    name: Integration Test (Full Pipeline)
+  integration-test-basic:
+    name: Integration Test (Basic)
     runs-on: ubuntu-latest
     needs: test
     # Only run if credentials are available
@@ -125,7 +125,7 @@ jobs:
             FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }})
 
             # Check for test config changes
-            TEST_CONFIG_FILES=$(echo "$FILES" | grep -E '^config/test-(integration|aggregation)-ci/.*\.(yaml|yml)$' || true)
+            TEST_CONFIG_FILES=$(echo "$FILES" | grep -E '^config/test-integration-ci/.*\.(yaml|yml)$' || true)
 
             # Check for code/non-doc changes
             CODE_CHANGED=$(echo "$FILES" | grep -qvE '^(README\.md|docs/.*|config/.*\.example|LICENSE|\.gitignore|config/[^/]+/.*\.(yaml|yml)$)' && echo "true" || echo "false")
@@ -165,15 +165,7 @@ jobs:
         if: steps.docs_check.outputs.code_changed == 'true'
         env:
           GOOGLE_CREDENTIALS_BASE64: ${{ secrets.GOOGLE_CREDENTIALS_BASE64 }}
-        run: |
-          if [ -n "$GOOGLE_CREDENTIALS_BASE64" ]; then
-            echo "Setting up Google Sheets credentials..."
-            echo "$GOOGLE_CREDENTIALS_BASE64" | base64 -d > /tmp/google_credentials.json
-            echo "GOOGLE_CREDENTIALS_FILE=/tmp/google_credentials.json" >> $GITHUB_ENV
-            echo "✓ Google Sheets credentials configured"
-          else
-            echo "⚠️  GOOGLE_CREDENTIALS_BASE64 not set, uploads will be skipped"
-          fi
+        run: .github/scripts/setup-google-sheets.sh
 
       - name: Clear Google Sheets before tests
         if: steps.docs_check.outputs.code_changed == 'true'
@@ -195,10 +187,10 @@ jobs:
         uses: actions/cache@v4
         with:
           path: .cache/github
-          key: integration-test-pr-cache-${{ hashFiles('config/test-integration-ci/test-ci-team/pr_report_config.yaml') }}-${{ github.run_id }}
+          key: integration-test-basic-pr-cache-${{ hashFiles('config/test-integration-ci/test-ci-team/pr_report_config.yaml') }}-${{ github.run_id }}
           restore-keys: |
-            integration-test-pr-cache-${{ hashFiles('config/test-integration-ci/test-ci-team/pr_report_config.yaml') }}-
-            integration-test-pr-cache-
+            integration-test-basic-pr-cache-${{ hashFiles('config/test-integration-ci/test-ci-team/pr_report_config.yaml') }}-
+            integration-test-basic-pr-cache-
 
       - name: Run integration test - Full workflow (Jira + PR + Email)
         if: steps.docs_check.outputs.code_changed == 'true'
@@ -212,15 +204,15 @@ jobs:
           GITHUB_PR_URL: ${{ github.event.pull_request.html_url }}
         run: |
           echo "=========================================="
-          echo "Running Full Integration Test"
+          echo "Running Basic Integration Test"
           echo "=========================================="
           echo "Testing: Jira + PR + Email Notification (test mode)"
           echo ""
 
-          # Add --no-upload only if Google Sheets is not configured
-          UPLOAD_ARGS=""
-          if [ -z "$GOOGLE_CREDENTIALS_FILE" ] || [ -z "$GOOGLE_SPREADSHEET_ID" ]; then
-            UPLOAD_ARGS="--no-upload"
+          # Get upload args using shared script
+          UPLOAD_ARGS=$(.github/scripts/get-upload-args.sh)
+
+          if [ -n "$UPLOAD_ARGS" ]; then
             echo "⚠️  Google Sheets not configured, skipping upload"
           else
             echo "✓ Google Sheets configured, will upload reports"
@@ -236,10 +228,114 @@ jobs:
             --mail-save-file reports/test-ci-team/emails
 
           echo ""
-          echo "✓ Full integration test completed (Jira + PR + Email)"
+          echo "✓ Basic integration test completed (Jira + PR + Email)"
           echo "Reports:"
           ls -lh reports/test-ci-team/jira/ 2>/dev/null || echo "  No Jira reports"
           ls -lh reports/test-ci-team/github/ 2>/dev/null || echo "  No PR reports"
+
+      - name: Test analysis prompt generation
+        if: steps.docs_check.outputs.code_changed == 'true'
+        run: .github/scripts/test-prompt-generation.sh "reports/test-ci-team"
+
+      - name: Upload test reports as artifacts
+        if: steps.docs_check.outputs.code_changed == 'true' && always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: integration-test-basic-reports
+          path: |
+            reports/test-ci-team/
+          retention-days: 7
+
+      - name: Report Statistics and PR Comment
+        if: steps.docs_check.outputs.code_changed == 'true' && always()
+        uses: ./.github/actions/report-comment
+        with:
+          reports_dir: 'reports/test-ci-team'
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Integration test summary
+        if: steps.docs_check.outputs.code_changed == 'true' && always()
+        run: |
+          echo "=========================================="
+          echo "Basic Integration Test Summary"
+          echo "=========================================="
+          echo ""
+          echo "Test Scenario:"
+          echo "  - Config: config/test-integration-ci/test-ci-team/"
+          echo "  - Reports: reports/test-ci-team/"
+          echo ""
+          echo "✅ Basic integration test completed successfully"
+
+
+  integration-test-aggregation:
+    name: Integration Test (Multi-Team Aggregation)
+    runs-on: ubuntu-latest
+    needs: test
+    # Only run if credentials are available
+    if: |
+      github.event_name == 'push' ||
+      (github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository)
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Check if code or test configs changed
+        id: docs_check
+        run: |
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }})
+
+            # Check for test config changes
+            TEST_CONFIG_FILES=$(echo "$FILES" | grep -E '^config/test-aggregation-ci/.*\.(yaml|yml)$' || true)
+
+            # Check for code/non-doc changes
+            CODE_CHANGED=$(echo "$FILES" | grep -qvE '^(README\.md|docs/.*|config/.*\.example|LICENSE|\.gitignore|config/[^/]+/.*\.(yaml|yml)$)' && echo "true" || echo "false")
+
+            if [ -n "$TEST_CONFIG_FILES" ] || [ "$CODE_CHANGED" = "true" ]; then
+              echo "code_changed=true" >> $GITHUB_OUTPUT
+              if [ -n "$TEST_CONFIG_FILES" ]; then
+                echo "✅ Test config files changed - running aggregation tests"
+              fi
+            else
+              echo "code_changed=false" >> $GITHUB_OUTPUT
+              echo "⏭️ Only docs/user configs changed - skipping aggregation tests"
+            fi
+          else
+            echo "code_changed=true" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Skip aggregation tests (docs only)
+        if: steps.docs_check.outputs.code_changed == 'false'
+        run: |
+          echo "✓ Skipping aggregation tests - only documentation files changed"
+          exit 0
+
+      - name: Set up Python
+        if: steps.docs_check.outputs.code_changed == 'true'
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        if: steps.docs_check.outputs.code_changed == 'true'
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .
+
+      - name: Setup Google Sheets credentials
+        if: steps.docs_check.outputs.code_changed == 'true'
+        env:
+          GOOGLE_CREDENTIALS_BASE64: ${{ secrets.GOOGLE_CREDENTIALS_BASE64 }}
+        run: .github/scripts/setup-google-sheets.sh
+
+      - name: Clear cache before aggregation test
+        if: steps.docs_check.outputs.code_changed == 'true'
+        run: |
+          echo "Clearing GitHub PR cache to ensure fresh data..."
+          rm -rf .cache/github/
+          echo "✓ Cache cleared"
 
       - name: Run integration test - Multi-team aggregation (Team 1)
         if: steps.docs_check.outputs.code_changed == 'true'
@@ -250,14 +346,11 @@ jobs:
           GOOGLE_SPREADSHEET_ID: ${{ secrets.TEST_CI_GOOGLE_SPREADSHEET_ID }}
         run: |
           echo "=========================================="
-          echo "Scenario 2: Multi-Team Aggregation - Team 1"
+          echo "Multi-Team Aggregation Test - Team 1"
           echo "=========================================="
 
-          # Add --no-upload only if Google Sheets is not configured
-          UPLOAD_ARGS=""
-          if [ -z "$GOOGLE_CREDENTIALS_FILE" ] || [ -z "$GOOGLE_SPREADSHEET_ID" ]; then
-            UPLOAD_ARGS="--no-upload"
-          fi
+          # Get upload args using shared script
+          UPLOAD_ARGS=$(.github/scripts/get-upload-args.sh)
 
           # Generate Jira reports for Team 1
           if [ -n "$JIRA_API_TOKEN" ]; then
@@ -268,12 +361,11 @@ jobs:
               --hide-individual-names || echo "⚠️  Team 1 Jira generation failed (continuing)"
           fi
 
-          # Generate PR reports for Team 1
+          # Generate PR reports for Team 1 (without --incremental since cache is cleared)
           echo "Generating PR reports for Team 1..."
           python -m impactlens.cli pr full \
             --config config/test-aggregation-ci/test-ci-team1/pr_report_config.yaml \
             $UPLOAD_ARGS \
-            --incremental \
             --hide-individual-names || echo "⚠️  Team 1 PR generation failed (continuing)"
 
           echo "✓ Team 1 reports completed"
@@ -288,14 +380,11 @@ jobs:
           GOOGLE_SPREADSHEET_ID: ${{ secrets.TEST_CI_GOOGLE_SPREADSHEET_ID }}
         run: |
           echo "=========================================="
-          echo "Scenario 2: Multi-Team Aggregation - Team 2"
+          echo "Multi-Team Aggregation Test - Team 2"
           echo "=========================================="
 
-          # Add --no-upload only if Google Sheets is not configured
-          UPLOAD_ARGS=""
-          if [ -z "$GOOGLE_CREDENTIALS_FILE" ] || [ -z "$GOOGLE_SPREADSHEET_ID" ]; then
-            UPLOAD_ARGS="--no-upload"
-          fi
+          # Get upload args using shared script
+          UPLOAD_ARGS=$(.github/scripts/get-upload-args.sh)
 
           # Generate Jira reports for Team 2
           if [ -n "$JIRA_API_TOKEN" ]; then
@@ -306,12 +395,11 @@ jobs:
               --hide-individual-names || echo "⚠️  Team 2 Jira generation failed (continuing)"
           fi
 
-          # Generate PR reports for Team 2
+          # Generate PR reports for Team 2 (without --incremental since cache is cleared)
           echo "Generating PR reports for Team 2..."
           python -m impactlens.cli pr full \
             --config config/test-aggregation-ci/test-ci-team2/pr_report_config.yaml \
             $UPLOAD_ARGS \
-            --incremental \
             --hide-individual-names || echo "⚠️  Team 2 PR generation failed (continuing)"
 
           echo "✓ Team 2 reports completed"
@@ -323,7 +411,7 @@ jobs:
           GOOGLE_SPREADSHEET_ID: ${{ secrets.TEST_CI_GOOGLE_SPREADSHEET_ID }}
         run: |
           echo "=========================================="
-          echo "Scenario 2: Multi-Team Aggregation - Aggregating Reports"
+          echo "Multi-Team Aggregation Test - Aggregating Reports"
           echo "=========================================="
 
           # Check if at least one team report exists
@@ -343,10 +431,10 @@ jobs:
           ls -R reports/test-ci-team*/*/combined_*.tsv 2>/dev/null || echo "No combined reports found yet"
           echo ""
 
-          # Add --no-upload only if Google Sheets is not configured
-          UPLOAD_ARGS=""
-          if [ -z "$GOOGLE_CREDENTIALS_FILE" ] || [ -z "$GOOGLE_SPREADSHEET_ID" ]; then
-            UPLOAD_ARGS="--no-upload"
+          # Get upload args using shared script
+          UPLOAD_ARGS=$(.github/scripts/get-upload-args.sh)
+
+          if [ -n "$UPLOAD_ARGS" ]; then
             echo "⚠️  Google Sheets not configured, skipping upload"
           else
             echo "✓ Google Sheets configured, will upload aggregated reports"
@@ -371,7 +459,7 @@ jobs:
           SMTP_PASSWORD: ${{ secrets.MAIL_APP_PASSWORD }}
         run: |
           echo "=========================================="
-          echo "Scenario 2: Multi-Team Aggregation - Email Notifications"
+          echo "Multi-Team Aggregation Test - Email Notifications"
           echo "=========================================="
           echo "Testing email deduplication across multiple teams"
           echo ""
@@ -387,105 +475,37 @@ jobs:
 
       - name: Test analysis prompt generation
         if: steps.docs_check.outputs.code_changed == 'true'
-        run: |
-          echo "=========================================="
-          echo "Testing Analysis Prompt Generation"
-          echo "=========================================="
-          echo ""
-
-          # Enable recursive globbing
-          shopt -s globstar nullglob
-
-          PROMPT_COUNT=0
-          FAILED_COUNT=0
-
-          # Test prompt generation for both Jira and PR combined reports
-          for pattern in "combined_jira_report" "combined_pr_report"; do
-            for report in reports/test-ci-team*/**/${pattern}_*.tsv; do
-              if [ -f "$report" ]; then
-                echo "Testing prompt generation for: $report"
-
-                # Extract directory and determine output
-                output_dir="$(dirname "$report")/prompts-test"
-                mkdir -p "$output_dir"
-
-                if python -m impactlens.scripts.analyze_with_claude_code \
-                  --reports-dir "$report" \
-                  --prompt-only \
-                  --output-dir "$output_dir" 2>&1; then
-                  echo "  ✓ Prompt generated successfully"
-                  PROMPT_COUNT=$((PROMPT_COUNT + 1))
-                else
-                  echo "  ✗ Failed to generate prompt"
-                  FAILED_COUNT=$((FAILED_COUNT + 1))
-                fi
-                echo ""
-              fi
-            done
-          done
-
-          echo "=========================================="
-          echo "Prompt Generation Test Summary"
-          echo "=========================================="
-          echo "  Prompts generated: $PROMPT_COUNT"
-          echo "  Failed: $FAILED_COUNT"
-
-          if [ $PROMPT_COUNT -eq 0 ]; then
-            echo ""
-            echo "⚠️  No combined reports found for prompt generation test"
-            echo "   This is expected if report generation was skipped"
-          elif [ $FAILED_COUNT -gt 0 ]; then
-            echo ""
-            echo "✗ Some prompt generations failed"
-            exit 1
-          else
-            echo ""
-            echo "✓ All prompt generation tests passed"
-          fi
+        run: .github/scripts/test-prompt-generation.sh "reports/test-ci-team*"
 
       - name: Upload test reports as artifacts
         if: steps.docs_check.outputs.code_changed == 'true' && always()
         uses: actions/upload-artifact@v4
         with:
-          name: integration-test-reports
+          name: integration-test-aggregation-reports
           path: |
-            reports/test-ci-team/
             reports/test-ci-team1/
             reports/test-ci-team2/
             reports/test-ci-aggregated/
           retention-days: 7
 
-      - name: Report Statistics and PR Comment
-        if: steps.docs_check.outputs.code_changed == 'true' && always()
-        uses: ./.github/actions/report-comment
-        with:
-          reports_dir: 'reports/test-ci-team'
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Integration test summary
         if: steps.docs_check.outputs.code_changed == 'true' && always()
         run: |
           echo "=========================================="
-          echo "Integration Test Summary"
+          echo "Multi-Team Aggregation Test Summary"
           echo "=========================================="
           echo ""
-          echo "Test Scenarios Executed:"
-          echo ""
-          echo "  1️⃣ Basic Integration Test (Single Team):"
-          echo "     - Config: config/test-integration-ci/test-ci-team/"
-          echo "     - Reports: reports/test-ci-team/"
-          echo ""
-          echo "  2️⃣ Multi-Team Aggregation Test:"
-          echo "     - Team 1: config/test-aggregation-ci/test-ci-team1/"
-          echo "     - Team 2: config/test-aggregation-ci/test-ci-team2/"
-          echo "     - Aggregation: config/test-aggregation-ci/aggregation_config.yaml"
-          echo "     - Team 1 Reports: reports/test-ci-team1/"
-          echo "     - Team 2 Reports: reports/test-ci-team2/"
-          echo "     - Aggregated Reports: reports/test-ci-aggregated/"
+          echo "Test Scenarios:"
+          echo "  - Team 1: config/test-aggregation-ci/test-ci-team1/"
+          echo "  - Team 2: config/test-aggregation-ci/test-ci-team2/"
+          echo "  - Aggregation: config/test-aggregation-ci/aggregation_config.yaml"
+          echo "  - Team 1 Reports: reports/test-ci-team1/"
+          echo "  - Team 2 Reports: reports/test-ci-team2/"
+          echo "  - Aggregated Reports: reports/test-ci-aggregated/"
           echo ""
           if [ -d "reports/test-ci-aggregated" ]; then
-            echo "  📊 Aggregated report files:"
-            ls -1 reports/test-ci-aggregated/ 2>/dev/null | sed 's/^/       /' || echo "       (none generated)"
+            echo "📊 Aggregated report files:"
+            ls -1 reports/test-ci-aggregated/ 2>/dev/null | sed 's/^/     /' || echo "     (none generated)"
             echo ""
           fi
-          echo "✅ Integration test pipeline completed successfully"
+          echo "✅ Multi-team aggregation test completed successfully"
