--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,9 @@ google-api-python-client>=2.100.0
 
 # Anthropic API (optional - for AI-powered analysis via API)
 anthropic>=0.40.0
+
+# Visualization (for box plots)
+pandas>=2.0.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+numpy>=1.24.0
